# rigid-dice

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/shape/: shape.cpp  shape.hpp
src/simulation/: body_system.cpp  body_system.hpp  collision.cpp  collision.hpp  collision_detection.cpp  collision_detection.hpp  collision_handling.cpp  collision_handling.hpp  collision_state.hpp  contact.cpp  contact.hpp  contact_derivation.cpp  contact_derivation.hpp  engine.cpp  engine.hpp  integrator.cpp  integrator.hpp  math.cpp  math.hpp  rigid_body.cpp  rigid_body.hpp  scene.cpp  scene.hpp
src/simulation/force/: drag_force.cpp  drag_force.hpp  force.cpp  force.hpp  gravity_force.cpp  gravity_force.hpp
src/system/: mesh_manager.cpp  mesh_manager.hpp  opengl.cpp  opengl.hpp  renderer.cpp  renderer.hpp  texture_manager.cpp  texture_manager.hpp
